--- a/requirements.txt
+++ b/requirements.txt
@@ -124,3 +124,19 @@ wmctrl==0.3
 WTForms==2.2.1
 zipp==3.1.0
 gmssl==3.2.1
+attrdict
+bumpversion<1,>=0.5.3
+configobj
+cytoolz
+lru-dict
+parsimonious
+pycryptodome
+cryptography
+requests
+toolz
+
+hypothesis>=3.6.1
+argcomplete
+pymitter
+asyncio
+promise
