--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.4.2
 appdirs==1.4.3
 appnope==0.1.0
+attrdict==2.0.1
 attrs==19.3.0
 backcall==0.1.0
 base58==2.0.0
@@ -13,7 +14,9 @@ certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
+cytoolz==0.10.1
 decorator==4.4.2
+ecdsa==0.16.0
 entrypoints==0.3
 environs==7.3.1
 eth-abi==2.1.1
@@ -36,14 +39,16 @@ flake8-polyfill==1.0.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Caching==1.8.0
+Flask-Cors==3.0.9
 Flask-DebugToolbar==0.11.0
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-Static-Digest==0.1.3
 Flask-WTF==0.14.3
-Flask-Script==2.0.6
 gevent==1.4.0
+gmssl==3.2.1
 greenlet==0.4.15
 gunicorn==20.0.4
 hexbytes==0.2.0
@@ -64,6 +69,7 @@ marshmallow==3.5.1
 mccabe==0.6.1
 more-itertools==8.2.0
 multiaddr==0.0.9
+mysqlclient==2.0.1
 netaddr==0.7.19
 packaging==20.3
 parsimonious==0.8.1
@@ -96,6 +102,7 @@ python-editor==1.0.4
 regex==2020.4.4
 requests==2.23.0
 rlp==1.2.0
+sha3==0.2.1
 six==1.14.0
 snowballstemmer==2.0.0
 soupsieve==2.0
@@ -121,14 +128,3 @@ Werkzeug==1.0.1
 wmctrl==0.3
 WTForms==2.2.1
 zipp==3.1.0
-gmssl==3.2.1
-attrdict
-bumpversion<1,>=0.5.3
-configobj
-cytoolz
-cryptography
-hypothesis>=3.6.1
-argcomplete
-pymitter
-asyncio
-promise
